# lpm-plot

./: .gitignore  README.md  gaudiy-pairwise-plot copy.py  pairwise_mutual_information.parquet  pyproject.toml
.github/workflows/: python-package.yml
jupyter/: fidelity-plot.ipynb  heatmap-interaction-demo.ipynb  heatmap-plot.ipynb  marginal-1d-plot.ipynb  marginal-2d-plot.ipynb  marginal-num-cat-plot.ipynb  marginal-num-num-plot.ipynb
src/lpm_plot/: __init__.py  plot_fidelity.py  plot_heatmap.py  plot_lines.py  plot_maps.py  plot_marginal.py
tests/: test_plot_fidelity.py  test_plot_heatmap.py  test_plot_lines.py  test_plot_marginal.py
tests/resources/: Pairwise_mutual_information.parquet  demo-detail-df.parquet  demo-heatmap-df.parquet  heatmap-detailed-test-data.csv  heatmap-test-data.csv  num-cat-observed.csv  num-cat-synthetic.csv
