[project]
name = "lpm_plot"
version = "0.0.1"
license = "Apache-2.0"
description = ""
authors = [
  {name = "Ulrich Schaechtle", email = "u.schaechtle@gmail.com"},
  {name = "eve n.u.", email = "eve@eatbigger.fish"},
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "polars>=1.7.1",
  "altair>=5.4.1",
  "pandas>=2.2.3", # Need pandas because of altair
  "pyarrow>=18.1.0",
  "vegafusion>=1.6.9",
  "vegafusion-python-embed>=1.6.9",
  "vl-convert-python>=1.7.0",
  "scipy>=1.14.1",
  "ruff>=0.13.2",
]

[dependency-groups]
dev = [
  "black>=24.8.0",
  "jupyter>=1.1.1",
  "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lpm_plot"]
